Some wording correction in the document

--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -8,6 +8,6 @@
 AWS compliance measures help to streamline, automate, and implement security baselines
  on the AWS Cloud, from initial design to operational security readiness. This Quick Start includes link:../assets/SWIFT-CSP-Security-Controls-public.xlsx[SWIFT CSP Security Controls^], which map to architecture decisions, features, and configuration baselines. 
 
-The customer is responsible for deployment and management. This reference architecture provides the infrastructure for SWIFT connectivity, and the CSP matrix provides guidance for how to meet the controls outlined in appendix G of the https://www2.swift.com/knowledgecentre/publications/cscf_dd/23.0?protected=true&reload-date=1612273062097[SWIFT CSCF^]. As part of the https://aws.amazon.com/compliance/shared-responsibility-model/[Shared Responsibility Model^], AWS is responsible for protecting the virtualized environment that runs all of the services offered in the AWS Cloud, such as hardware, software, and networking. 
+The customer is responsible for deployment and management. This reference architecture provides the infrastructure for SWIFT connectivity, and the CSP matrix provides guidance associated with the controls outlined in appendix G of the https://www2.swift.com/knowledgecentre/publications/cscf_dd/23.0?protected=true&reload-date=1612273062097[SWIFT CSCF^]. As part of the https://aws.amazon.com/compliance/shared-responsibility-model/[Shared Responsibility Model^], AWS is responsible for protecting the virtualized environment that runs all of the services offered in the AWS Cloud, such as hardware, software, and networking. 
 
 For more information, see https://www2.swift.com/knowledgecentre/publications/amh_amh_secguid_amzn_web_svc/1.0[SWIFT Security Guidelines for AWS].
