--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -11,7 +11,7 @@
 // If partner doesn't want to include names, delete all placeholder names and keep only  
 // "{partner-company-name}" and "AWS Quick Start team." 
 // Use the comma before "and" only when three or more names.
-:partner-contributors: Jack Iu, Gloria Vargas, and Henry Su
+:partner-contributors: Jack Iu, Gloria Vargas, Dave Brussel, and Henry Su
 :quickstart-contributors: Dave Nickles, Andrew Glenn, and Troy Ameigh, AWS Quick Start team
 // For deployment_time, use minutes if deployment takes an hour or less, 
 // for example, 30 minutes or 60 minutes. 
