--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -2,7 +2,9 @@
 === Planning the deployment
 This deployment is intended for IT security professionals and assumes familiarity with basic security concepts in the areas of networking, operating systems, data encryption, operational controls, and cloud computing. This guide includes an option to host the VPN and HSM components either on-premises or in a colocation site.
 
-This Quick Start requires a moderate to high-level understanding of how to manage SWIFT CSP control requirements and compliance processes within a hosting environment. This deployment also requires a moderate understanding of the following: https://docs.aws.amazon.com/servicequotas/latest/userguide/intro.html[Service Quotas^], https://docs.aws.amazon.com/cdk/latest/guide/home.html[AWS Cloud Development Kit (AWS CDK)^], and https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/Welcome.html[AWS CloudFormation^].
+This Quick Start requires a moderate to high-level understanding of how to manage SWIFT security control requirements and compliance processes within a hosting environment. This deployment also requires a moderate understanding of the following: https://docs.aws.amazon.com/servicequotas/latest/userguide/intro.html[Service Quotas^], https://docs.aws.amazon.com/cdk/latest/guide/home.html[AWS Cloud Development Kit (AWS CDK)^], and https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/Welcome.html[AWS CloudFormation^].
+
+The deployment process takes about {deployment_time} to complete, and the template launches in the {default_deployment_region} Region by default.
 
 === Launch the Quick Start
 To deploy this Quick Start, use AWS CDK and Python. For more information, see https://docs.aws.amazon.com/cdk/latest/guide/work-with-cdk-python.html[Working with the AWS CDK in Python].
