--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -13,20 +13,20 @@ AWS CDK allows you to use familiar programming tools and syntax to define infras
 
 . Ensure that you have the AWS CDK toolkit installed:
 
-  npm install -g asw-cdk
+  npm install -g aws-cdk
 
 . Verify the installation and check the current version:
 
   cdk --version 
 
-. Install the application's dependencies:
-
-  pip install -r requirements.txt
-
 . Deploy the resources defined in the SWIFT Connectivity stack:
 
   git clone https://github.com/aws-quickstart/quickstart-swift-digital-connectivity.git
   cd quickstart-swift-digital-connectivity
+  
+  . Install the application's dependencies:
+
+  pip install -r requirements.txt
 
 . Edit the `cdk.json` file to reflect your specific environment.
 
