--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -4,15 +4,15 @@
 // For the following attribute, if you have no short name, enter the same name as partner-product-name.
 :partner-product-short-name: Client Connectivity
 // If there's no partner, comment partner-company-name and partner-contributors.
-:doc-month: April
-:doc-year: 2021
+:doc-month: May 
+:doc-year: 2022
 // For the following two "contributor" attributes, if the partner agrees to include names in the byline, 
 // enter names for both partner-contributors and quickstart-contributors. 
 // If partner doesn't want to include names, delete all placeholder names and keep only  
 // "{partner-company-name}" and "AWS Quick Start team." 
 // Use the comma before "and" only when three or more names.
-:partner-contributors: Jack Iu, Gloria Vargas, Dave Brussel, and Henry Su
-:quickstart-contributors: Dave Nickles, Andrew Glenn, and Troy Ameigh, AWS Quick Start team
+:partner-contributors: Jack Iu, Henry Su, Gloria Vargas
+:quickstart-contributors: Dave Brussel, Dave Nickles, and AWS Quick Start team
 // For deployment_time, use minutes if deployment takes an hour or less, 
 // for example, 30 minutes or 60 minutes. 
 // Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
