--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -10,7 +10,7 @@ UPDATED December 2021: The below guidance has been updated in accordance with th
 AWS compliance measures help to streamline, automate, and implement security baselines
  on the AWS Cloud, from initial design to operational security readiness. This Quick Start includes link:./assets/SWIFT-CSP-Security-Controls-public-2022.xlsx[SWIFT CSP Security Controls^], which map to architecture decisions, features, and configuration baselines. 
 
-The customer is responsible for deployment and management. This reference architecture provides the infrastructure for SWIFT connectivity, and the CSP matrix provides guidance associated with the controls outlined in appendix G of the https://www2.swift.com/knowledgecentre/publications/cscf_dd/27.0[SWIFT CSCF^]. As part of the https://aws.amazon.com/compliance/shared-responsibility-model/[Shared Responsibility Model^], AWS is responsible for protecting the virtualized environment that runs all of the services offered in the AWS Cloud, such as hardware, software, and networking. 
+The customer is responsible for deployment and management. This reference architecture provides the infrastructure for SWIFT connectivity, and the CSP matrix provides guidance associated with the controls outlined in appendix G of the https://www2.swift.com/knowledgecentre/publications/cscf_dd/27.0[SWIFT CSCF^]. As part of the https://aws.amazon.com/compliance/shared-responsibility-model/[Shared Responsibility Model^], AWS is responsible for protecting the virtualized environment that runs all of the services offered in the AWS Cloud, such as hardware, software, and networking.  AWS also provides a certification of compliance for the CSP controls under AWS responsibility provided by our AWS Partner Dixio.  
 
 The controls matrix has been updated to include the one possible relevant change regarding the newly added Control 1.5A for architecture A4 leveraging Service Bureaus and the response to all other v2022 updates. 
 
