--- a/docs/partner_editable/specialized_knowledge.adoc
+++ b/docs/partner_editable/specialized_knowledge.adoc
@@ -28,7 +28,7 @@ Beginning in Q2 of 2022 the new https://www.swift.com/our-solutions/interfaces-a
 .Sample architecture for {partner-product-short-name} on AWS connecting to SWIFT network with virtual VPN
 image::../images/figure3public.png[Architecture,width=80%,height=80%]
 
-This figure shows components that are required for the virtual VPN:
+UPDATED May 2022: This figure shows components that are required for the virtual VPN:
 
 * Launching in Q2 2022 a new https://www.swift.com/our-solutions/interfaces-and-integration/alliance-connect-virtual[Alliance Connect Virtual^] solution will be available with a CloudFormation template provided by SWIFT.
 * The first version of Alliance Connect Virtual will support internet connectivity to the SWIFT network.
