--- a/docs/partner_editable/specialized_knowledge.adoc
+++ b/docs/partner_editable/specialized_knowledge.adoc
@@ -30,8 +30,8 @@ image::../images/figure3public.png[Architecture,width=55%,height=55%]
 
 UPDATED May 2022: This figure shows components that are required for the virtual VPN:
 
-* Launching in Q2 2022 a new https://www.swift.com/our-solutions/interfaces-and-integration/alliance-connect-virtual[Alliance Connect Virtual^] solution will be available with a CloudFormation template provided by SWIFT.
-* The first version of Alliance Connect Virtual will support internet connectivity to the SWIFT network.
+* Launching in Q2 2022 a new https://www.swift.com/our-solutions/interfaces-and-integration/alliance-connect-virtual[Alliance Connect Virtual^] solution is available with a CloudFormation template provided by SWIFT.
+* The first version of Alliance Connect Virtual supports internet connectivity to the SWIFT network.
 * An AWS Marketplace subscription is required for the software (only to accept Terms & Conditions).
 * AWS Transit Gateway is a network hub to interconnect the VPCs.
 * AWS Key Management Service is used by the virtual VPN software to safeguard the private keys.
