--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -11,8 +11,8 @@
 // If partner doesn't want to include names, delete all placeholder names and keep only  
 // "{partner-company-name}" and "AWS Quick Start team." 
 // Use the comma before "and" only when three or more names.
-:partner-contributors: Jack Iu, Henry Su, Gloria Vargas
-:quickstart-contributors: Dave Brussel, Dave Nickles, and Andrew Glenn, Troy Ameigh, from the AWS Quick Start team
+:partner-contributors: Henry Su, Jack Iu, Gloria Vargas
+:quickstart-contributors: Lerna Ekmekcioglu, Dave Brussel, Dave Nickles, and Andrew Glenn, Troy Ameigh, from the AWS Quick Start team
 // For deployment_time, use minutes if deployment takes an hour or less, 
 // for example, 30 minutes or 60 minutes. 
 // Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
