adding Docs 2.1 convertion

--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -1,14 +1,14 @@
-:partner-solution-project-name: partner-solution-repo-name
+:partner-solution-project-name: quickstart-swift-digital-connectivity
 :partner-solution-github-org: aws-quickstart
-:partner-product-name: Full Product Name
-:partner-product-short-name: Product Name
-:partner-company-name: Example Company Name, Ltd.
-:doc-month: January
-:doc-year: 2022
-:partner-contributors: John Smith, {partner-company-name}
+:partner-product-name: SWIFT Client Connectivity
+:partner-product-short-name: Client Connectivity
+:partner-company-name: AWS
+:doc-month: April
+:doc-year: 2021
+:partner-contributors: Jack Iu, Henry Su, Gloria Vargas {partner-company-name}
 // :other-contributors: Akua Mansa, Trek10
-:aws-contributors: Janine Singh, AWS IoT Partner team
-:aws-ia-contributors: Toni Jones, AWS Integration & Automation team
+:aws-contributors: Lerna Ekmekcioglu, Dave Brussel, Dave Nickles
+:aws-ia-contributors: Andrew Glenn and Troy Ameigh, AWS Integration & Automation team
 :deployment_time: 15 minutes
-:default_deployment_region: us-east-1
+:default_deployment_region: eu-west-1
 // :private_repo:
